--- a/style.scss
+++ b/style.scss
@@ -18,3 +18,47 @@ body {
   color: #000;
   font-weight: 600;
 }
+
+.quote-container {
+    width: auto;
+    max-width: 900px;
+    padding: 20px 30px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.7);
+    box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2);
+}
+
+.quote-text {
+    // 1 rem = 16px
+    font-size: 2.75rem;
+    font-weight: 400;
+}
+
+.long-quote {
+    font-size: 2rem;
+}
+
+.fa-quote-left {
+    font-size: 4rem;
+}
+
+.quote-author {
+    margin-top: 10px;
+    font-size: 2rem;
+    font-weight: 300;
+    font-style: italic;
+}
+
+
+// Media queries
+
+@media screen and (max-width: 1000px) {
+    .quote-container {
+        margin: auto 10px;
+    }
+
+    .quote-text {
+        font-size: 2.5rem;
+    }
+}
+
